--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "lightningcss": "^1.30.2",
     "prettier": "^3.6.2",
     "typescript": "5.8.3"
   },
