--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,10 @@
     "dev": "NODE_ENV=development bun run --hot src/index.ts",
     "build": "NODE_ENV=production bun build src/index.ts --outdir dist --target bun",
     "start": "NODE_ENV=production bun run dist/index.js",
-    "studio": "prisma studio --port 3001 --hostname 0.0.0.0",
-    "postinstall": "prisma generate",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "prisma": "^6.17.1"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "5.8.3"
@@ -24,8 +21,6 @@
     "@google/generative-ai": "^0.24.1",
     "@hono/node-server": "1.12.0",
     "@hono/zod-validator": "0.7.3",
-    "@prisma/adapter-better-sqlite3": "^6.17.1",
-    "@prisma/client": "^6.17.1",
     "@supabase/supabase-js": "^2.84.0",
     "@types/cheerio": "^1.0.0",
     "better-auth": "1.3.24",
