Update environment configuration and ignore files
- Added `EXPO_PUBLIC_API_URL` to the frontend `.env` file for API integration.
- Updated backend `.gitignore` to include `.env` for better environment variable management.
- Cleaned up backend `.env` by removing unused variables to streamline configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ expo.log
 
 # Backend generated
 backend/generated/
+
+# dotenv environment variable files
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+.env
