--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
       "eas": {
         "projectId": "27f58541-f28c-4b51-a714-9c0cba293d25"
       }
-    }
+    },
+    "owner": "areyeswaffl"
   }
 }
