--- a/app.json
+++ b/app.json
@@ -13,7 +13,10 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.vibecodeapp.vibechat",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSCalendarsUsageDescription": "VibeChat needs access to your calendar to create and manage event reminders for your group chats.",
+        "NSRemindersUsageDescription": "VibeChat needs access to reminders to help you keep track of important group events.",
+        "NSCalendarsFullAccessUsageDescription": "VibeChat needs full calendar access to create and manage event reminders for your group chats."
       }
     },
     "android": {
