Implement unread counts polling fix and add expo-audio dependency
- Created a shared custom hook `useUnreadCounts` to centralize unread message counts polling, preventing duplicate API calls across `ChatScreen` and `ChatListScreen`.
- Updated both screens to utilize the new hook, improving performance and maintainability.
- Added `expo-audio` dependency to package.json and package-lock.json for audio functionalities.
- Updated app.json to include development entitlements for push notifications.

--- a/app.json
+++ b/app.json
@@ -17,6 +17,9 @@
         "NSCalendarsUsageDescription": "VibeChat needs access to your calendar to create and manage event reminders for your group chats.",
         "NSRemindersUsageDescription": "VibeChat needs access to reminders to help you keep track of important group events.",
         "NSCalendarsFullAccessUsageDescription": "VibeChat needs full calendar access to create and manage event reminders for your group chats."
+      },
+      "entitlements": {
+        "aps-environment": "development"
       }
     },
     "android": {
