Fix calendar permission crash and implement markdown rendering in messages
- Added missing iOS calendar permission keys to `app.json` and `Info.plist` to prevent app crashes on startup due to missing permissions.
- Updated `AddToCalendar` component to lazy-load the `expo-calendar` module, improving app performance and user experience.
- Implemented markdown rendering in the `MessageText` component, allowing formatted messages with support for various markdown features while preserving mention functionality.
- Enhanced styling for markdown elements to ensure a professional appearance across messages.

--- a/app.json
+++ b/app.json
@@ -15,8 +15,10 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "NSCalendarsUsageDescription": "VibeChat needs access to your calendar to create and manage event reminders for your group chats.",
+        "NSCalendarsWriteOnlyAccessUsageDescription": "VibeChat needs to add events to your calendar for group chat scheduling.",
+        "NSCalendarsFullAccessUsageDescription": "VibeChat needs full calendar access to create and manage event reminders for your group chats.",
         "NSRemindersUsageDescription": "VibeChat needs access to reminders to help you keep track of important group events.",
-        "NSCalendarsFullAccessUsageDescription": "VibeChat needs full calendar access to create and manage event reminders for your group chats."
+        "NSRemindersFullAccessUsageDescription": "VibeChat needs full reminders access to create and manage tasks for your group chats."
       },
       "entitlements": {
         "aps-environment": "development"
