Add premium UX enhancements with new modals for AI tools and custom commands
- Introduced a complete redesign of the AI tools interaction system, inspired by modern aesthetics.
- Added dedicated bottom sheet modals for creating custom commands and AI friends, streamlining user interactions.
- Enhanced the AttachmentsMenu with improved visual design, including liquid glass aesthetics and better typography.
- Implemented new mutations for creating custom commands and AI friends, with optimized user flows and haptic feedback.
- Updated ChatScreen to integrate the new modals, significantly reducing the steps required for creating commands and AI friends.
- Overall, these changes enhance the user experience, making it more intuitive and visually appealing.

--- a/app.json
+++ b/app.json
@@ -18,7 +18,9 @@
         "NSCalendarsWriteOnlyAccessUsageDescription": "VibeChat needs to add events to your calendar for group chat scheduling.",
         "NSCalendarsFullAccessUsageDescription": "VibeChat needs full calendar access to create and manage event reminders for your group chats.",
         "NSRemindersUsageDescription": "VibeChat needs access to reminders to help you keep track of important group events.",
-        "NSRemindersFullAccessUsageDescription": "VibeChat needs full reminders access to create and manage tasks for your group chats."
+        "NSRemindersFullAccessUsageDescription": "VibeChat needs full reminders access to create and manage tasks for your group chats.",
+        "NSPhotoLibraryUsageDescription": "VibeChat needs access to your photos to let you save and share them.",
+        "NSPhotoLibraryAddUsageDescription": "VibeChat needs permission to save images to your gallery."
       },
       "entitlements": {
         "aps-environment": "development"
