--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "description": "Making group chats great again. Your friend group chats with custom ChatGPT in them.",
     "orientation": "portrait",
     "icon": "./assets/image-1762790557.jpeg",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
