Update app assets and UI components for enhanced branding and user experience
- Replaced app icon and adaptive icon in `app.json` with the new VibeChat branding.
- Updated button styles across the app to utilize the new VibeChat brand gradient.
- Introduced a new `LuxeLogoLoader` component for loading states, enhancing visual consistency.
- Added multiple new assets including images and videos to support the updated branding.
- Improved loading indicators in various screens to use the new `LuxeLogoLoader` for a cohesive look.
- Enhanced onboarding and chat screens with updated gradients and animations for a more engaging user experience.

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "version": "1.0.0",
     "description": "Making group chats great again. Your friend group chats with custom ChatGPT in them.",
     "orientation": "portrait",
-    "icon": "./assets/image-1762790557.jpeg",
+    "icon": "./assets/vibechat icon main.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -30,7 +30,7 @@
       "edgeToEdgeEnabled": true,
       "package": "com.vibecodeapp.vibechat",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/image-1762790557.jpeg",
+        "foregroundImage": "./assets/vibechat icon main.png",
         "backgroundColor": "#1a1a2e"
       }
     },
