Update eas.json to configure preview environment with new APP_VARIANT setting
- Changed the preview distribution configuration to include an environment variable `APP_VARIANT` set to `preview`, replacing the previous Android build type setting.
- This update aligns the configuration with the new environment management strategy for better deployment handling.

--- a/eas.json
+++ b/eas.json
@@ -15,8 +15,8 @@
     },
     "preview": {
       "distribution": "internal",
-      "android": {
-        "buildType": "apk"
+      "env": {
+        "APP_VARIANT": "preview"
       }
     },
     "production": {}
