--- a/app.json
+++ b/app.json
@@ -36,6 +36,17 @@
         "backgroundColor": "#1a1a2e"
       }
     },
+    "plugins": [
+      "@livekit/react-native-expo-plugin",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow VibeChat to access your camera",
+          "microphonePermission": "Allow VibeChat to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ]
+    ],
     "extra": {
       "eas": {
         "projectId": "27f58541-f28c-4b51-a714-9c0cba293d25"
