--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "cheerio": "^1.1.2",
     "expo-server-sdk": "^4.0.0",
     "hono": "4.6.0",
+    "livekit-server-sdk": "^2.15.0",
     "openai": "^6.7.0",
     "zod": "4.1.11"
   }
