--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5",
+    "@livekit/react-native": "^2.9.6",
+    "@livekit/react-native-expo-plugin": "^1.0.1",
+    "@livekit/react-native-webrtc": "^137.0.2",
     "@nandorojo/galeria": "2.0.0-rc.4",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -98,6 +101,7 @@
     "expo-video": "~2.1.8",
     "expo-video-thumbnails": "9.1.3",
     "expo-web-browser": "~14.1.6",
+    "livekit-client": "^2.16.1",
     "lottie-react-native": "7.2.2",
     "lucide-react-native": "0.544.0",
     "nativewind": "^4.1.23",
