--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@types/cheerio": "^1.0.0",
     "better-auth": "1.3.24",
     "cheerio": "^1.1.2",
+    "date-fns-tz": "^3.2.0",
     "expo-server-sdk": "^4.0.0",
     "hono": "4.6.0",
     "livekit-server-sdk": "^2.15.0",
