--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "NSPhotoLibraryUsageDescription": "VibeChat needs access to your photos to let you save and share them.",
         "NSPhotoLibraryAddUsageDescription": "VibeChat needs permission to save images to your gallery.",
         "NSCameraUsageDescription": "VibeChat needs access to your camera to let you take photos and videos to share in chats.",
-        "NSMicrophoneUsageDescription": "VibeChat needs access to your microphone to record audio for videos and voice messages."
+        "NSMicrophoneUsageDescription": "VibeChat needs access to your microphone to record audio for videos and voice messages.",
+        "NSContactsUsageDescription": "VibeChat needs access to your contacts to help you find and invite friends."
       },
       "entitlements": {
         "aps-environment": "development"
