feat: add chat profile image upload functionality
- Implemented a new endpoint POST /api/chats/:id/image for uploading chat profile images.
- Added validation for image presence, user permissions, file type, and size limits.
- Integrated image storage and updated chat records with the new image URL upon successful upload.
- Enhanced error handling and logging for better debugging and user feedback.

--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.vibecodeapp.vibechat",
+      "buildNumber": "2",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "UIBackgroundModes": ["audio", "voip"],
@@ -34,6 +35,7 @@
     "android": {
       "edgeToEdgeEnabled": true,
       "package": "com.vibecodeapp.vibechat",
+      "versionCode": 2,
       "permissions": [
         "RECORD_AUDIO",
         "FOREGROUND_SERVICE",
