--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-fetch-sse": "^0.1.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-ios-context-menu": "3.1.0",
@@ -120,6 +121,7 @@
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.3.3",
     "react-native-pager-view": "6.7.1",
+    "react-native-polyfill-globals": "^3.1.0",
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
@@ -130,6 +132,7 @@
     "react-native-webview": "13.13.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
+    "text-encoding": "^0.7.0",
     "uuid": "^11.1.0",
     "victory-native": "^41.16.2",
     "zeego": "^3.0.6",
