--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pdf-parse": "^1.1.5"
   },
   "peerDependencies": {
     "typescript": "5.8.3"
@@ -30,6 +31,7 @@
     "hono": "4.6.0",
     "livekit-server-sdk": "^2.15.0",
     "openai": "^6.7.0",
+    "pdf-parse": "^1.1.1",
     "zod": "4.1.11"
   }
 }
