Implement universal links support for VibeChat
Changes:
- Added associated domains in `app.json` for universal links.
- Updated `App.tsx` to include HTTPS prefix for universal links.
- Modified backend to serve Apple App Site Association (AASA) file for universal links.
- Implemented web fallback pages for invite and chat links.
- Updated invite link generation to use universal links instead of custom scheme.
- Enhanced sharing functionality in chat screens to utilize new universal links.

These updates provide a seamless experience for users, allowing direct app access from shared links and improving overall usability.

--- a/app.json
+++ b/app.json
@@ -13,6 +13,9 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.vibecodeapp.vibechat",
       "buildNumber": "6",
+      "associatedDomains": [
+        "applinks:vibechat-zdok.onrender.com"
+      ],
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "UIBackgroundModes": ["audio", "voip"],
