Implement PostHog analytics integration and enhance image handling features
Changes:
- Added PostHog analytics integration with a new `useAnalytics` hook for tracking user events and behaviors.
- Wrapped the app in `PostHogProvider` to enable analytics tracking throughout the application.
- Enhanced image saving functionality in `ZoomableImageViewer` to handle various image formats based on content type.
- Improved error handling for image saving and sharing processes, providing more specific user feedback.
- Updated `PersonalChatScreen` to allow selectable text in Markdown components, enhancing user interaction.

These updates provide comprehensive analytics capabilities and improve image handling, contributing to a better user experience in VibeChat.

--- a/app.json
+++ b/app.json
@@ -12,13 +12,16 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.vibecodeapp.vibechat",
-      "buildNumber": "7",
+      "buildNumber": "8",
       "associatedDomains": [
         "applinks:vibechat-zdok.onrender.com"
       ],
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
-        "UIBackgroundModes": ["audio", "voip"],
+        "UIBackgroundModes": [
+          "audio",
+          "voip"
+        ],
         "NSCalendarsUsageDescription": "VibeChat needs access to your calendar to create and manage event reminders for your group chats.",
         "NSCalendarsWriteOnlyAccessUsageDescription": "VibeChat needs to add events to your calendar for group chat scheduling.",
         "NSCalendarsFullAccessUsageDescription": "VibeChat needs full calendar access to create and manage event reminders for your group chats.",
@@ -38,7 +41,7 @@
     "android": {
       "edgeToEdgeEnabled": true,
       "package": "com.vibecodeapp.vibechat",
-      "versionCode": 7,
+      "versionCode": 8,
       "permissions": [
         "RECORD_AUDIO",
         "FOREGROUND_SERVICE",
@@ -59,7 +62,8 @@
           "microphonePermission": "Allow VibeChat to access your microphone",
           "recordAudioAndroid": true
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "extra": {
       "eas": {
