--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "expo": "53.0.9",
-    "expo-application": "~6.1.4",
+    "expo-application": "~6.1.5",
     "expo-asset": "11.1.5",
     "expo-audio": "~0.4.9",
     "expo-auth-session": "^6.0.3",
@@ -68,7 +68,7 @@
     "expo-dev-client": "~5.1.7",
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.5",
-    "expo-file-system": "~18.1.8",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.6",
@@ -79,6 +79,7 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-live-photo": "~0.1.4",
+    "expo-localization": "~16.1.6",
     "expo-location": "~18.1.4",
     "expo-mail-composer": "~14.1.4",
     "expo-manifests": "~0.16.4",
@@ -108,6 +109,7 @@
     "nativewind": "^4.1.23",
     "openai": "^4.89.0",
     "patch-package": "^8.0.0",
+    "posthog-react-native": "^4.18.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
