--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "livekit-server-sdk": "^2.15.0",
     "openai": "^6.7.0",
     "pdf-parse": "^1.1.1",
+    "posthog-node": "^5.21.0",
     "zod": "4.1.11"
   }
 }
