Update app configuration for production release
Changes:
- Incremented iOS build number from 8 to 9 and Android version code from 8 to 9 in app.json.
- Changed iOS entitlements from development to production for deployment readiness.
- Added PostHog API key and host configuration to eas.json for enhanced analytics tracking.

These updates prepare the app for a production release and improve analytics capabilities, ensuring better monitoring and performance insights.

--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.vibecodeapp.vibechat",
-      "buildNumber": "8",
+      "buildNumber": "9",
       "associatedDomains": [
         "applinks:vibechat-zdok.onrender.com"
       ],
@@ -35,13 +35,13 @@
         "NSLocationWhenInUseUsageDescription": "VibeChat needs access to your location to attach location data to your photos and videos."
       },
       "entitlements": {
-        "aps-environment": "development"
+        "aps-environment": "production"
       }
     },
     "android": {
       "edgeToEdgeEnabled": true,
       "package": "com.vibecodeapp.vibechat",
-      "versionCode": 8,
+      "versionCode": 9,
       "permissions": [
         "RECORD_AUDIO",
         "FOREGROUND_SERVICE",
