--- a/package.json
+++ b/package.json
@@ -124,6 +124,8 @@
     "react-native-mmkv": "^3.3.3",
     "react-native-pager-view": "6.7.1",
     "react-native-polyfill-globals": "^3.1.0",
+    "react-native-purchases": "^9.7.1",
+    "react-native-purchases-ui": "^9.7.1",
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
